2009-06-16  Thomas Moulard  <thomas.moulard@gmail.com>

	Do not use boost::make_shared.
	* optimization-tests/hs071.hh: Here.

2009-06-16  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix broken pkg-config.mk file.
	* .gitignore: New.
	* build-aux/pkg-config.mk: Fix variable names.

2009-06-15  Thomas Moulard  <thomas.moulard@gmail.com>

	Update to new constraint interface.
	* optimization-tests/hs071.hh: New.

2009-06-10  Thomas Moulard  <thomas.moulard@gmail.com>

	Remove comment and fix remodir computation.
	* doc/sf-upload.sh.in: Here.

2009-06-10  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix remotedir computation in SF upload script.
	* doc/sf-upload.sh.in: Here.

2009-06-10  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix documentation rules.
	* doc/Makefile.am: Fix CLEANFILES variable.
	* doc/sf-upload.sh.in: Fix permissions
	before uploading documentation.

2009-06-10  Thomas Moulard  <thomas.moulard@gmail.com>

	Add roboptim-core.m4 file.
	* build-aux/roboptim-core.m4: New.

2009-06-10  Thomas Moulard  <thomas.moulard@gmail.com>

	Add missing mkdir -p.
	* doc/Makefile.am: Here.

2009-06-10  Thomas Moulard  <thomas.moulard@gmail.com>

	Add new Doxygen rules.
	* build-aux/doxygen.m4: New.
	* doc/Doxyfile.in: Update.
	* doc/Makefile.am: Make rules more robust.
	* doc/Makefile.in: New.
	* doc/sf-upload.sh.in: Fix permissions problems.

2009-06-10  Thomas Moulard  <thomas.moulard@gmail.com>

	Add pkg-config rules.
	* build-aux/pkg-config.mk: New.
	* build-aux/pkg-config.pc.in: Use Autoconf new
	macros.
